Added properties for eureka client

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,7 @@ server.port=8081
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=food-delivery-app-db
-#spring.data.mongodb.username=user
-#spring.data.mongodb.password=secret
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8005/eureka
+eureka.client.registerWithEureka=true
+eureka.client.fetchRegistry=true
